# astraport-core

./: DEVELOPMENT.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  GUIDE.md
examples/: portfolio_analysis.py
src/: __init__.py  data_ingestion.py  diversification.py  prediction.py  risk_scoring.py
tests/: test_modules.py
